<resources>
    <string name="app_name">DbSample</string>
    <string name="sets">Sets:</string>
    <string name="example_workout_title">Example Workout Title</string>
    <string name="_10">10</string>
    <string name="reps_secs">Reps/Secs:</string>
    <string name="_10_1">10</string>
    <string name="example_description">Example description</string>
    <string name="button">Button</string>
    <string name="delete">delete</string>
    <string name="save">save</string>

    <string-array name="MainActivityList">
        <item>Workouts</item>
        <item>Add Workouts</item>
        <item>Online Workouts</item>
    </string-array>
</resources>
